--- a/selectize/css/selectize.css
+++ b/selectize/css/selectize.css
@@ -234,6 +234,7 @@
 .selectize-dropdown {
   position: absolute;
   z-index: 10;
+  width: 900px;
   border: 1px solid #d0d0d0;
   background: #ffffff;
   margin: -1px 0 0 0;
