--- a/style.css
+++ b/style.css
@@ -527,7 +527,7 @@ p strong{
 }
 
 .topsearch {
-	min-width: 240px;
+	min-width: 600px;
 }
 
 .nav {
@@ -1183,4 +1183,45 @@ code {
 
 .card {
 	padding: 1.25rem;
+}
+
+.rating {
+    display: flex;
+    flex-direction: row-reverse;
+    /*justify-content: center*/
+}
+
+.rating>input {
+    display: none
+}
+
+.rating>label {
+    position: relative;
+    width: 1em;
+    font-size: 3vw;
+    color: #FFD600;
+    cursor: pointer
+}
+
+.rating>label::before {
+    content: "\2605";
+    position: absolute;
+    opacity: 0
+}
+
+.rating>label:hover:before,
+.rating>label:hover~label:before {
+    opacity: 1 !important
+}
+
+.rating>input:checked~label:before {
+    opacity: 1
+}
+
+.rating:hover>input:checked~label:before {
+    opacity: 0.4
+}
+
+.buttoncell {
+	padding:8px;
 }
