--- a/plugins/nanogallery2/src/css/nanogallery2.css
+++ b/plugins/nanogallery2/src/css/nanogallery2.css
@@ -313,7 +313,7 @@
 
 .nGY2 .nGY2GThumbnailCustomLayer {
 	position: absolute;
-  display: block;
+  display: none;
   top: 0;
   bottom: 0;
   left: 0;
